--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <button onclick="Roll()">Roll Wheel</button>
         <div id="wrapper" class="wrapper hide">
             <div class="wrap">
-                <!-- <img id="wheel-back" src="wheel_back.png" alt="back"> -->
-                <img id="icon" src="icon.svg" width="200" height="300"></img>
+                <img id="wheel-back" src="wheel_back_.png" alt="back">
+                <img id="wheel-arrow" src="whw.png" alt="back">
             <canvas id="canvas" width="434" height="434" onclick="startSpin()">
                 <p style="color: white">Sorry, your browser doesn't support canvas. Please try another.</p>
             </canvas>
