--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             function Roll(){
                 document.getElementById('wrapper').className = "wrapper show";
             }
-            Draw_Wheel(12, items, 2, 7); //number items, items of wheel, animation duration,
+            Draw_Wheel(12, items, 2, 7); //number items, items of wheel, animation duration, selected item
             /*Wheel script*/
 /*Animation of win*/
             var rnd = Math.random,
